obk-infra-trunk/k8s-yaml/argocd-config/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: generic-alb
  name: argocd
  namespace: argocd
spec:
  rules:
  - host: ${HOST}
    http:
      paths:
      - path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
        pathType: Prefix
